Clients logo section done

--- a/index.html
+++ b/index.html
@@ -19,30 +19,33 @@
         </header>
     </div>
     <!-- Banner Section Start -->
-    <section class="baner-section">
+    <section class="baner-section container">
         <div class="main-baner">
             <div class="baner-left">
                 <h1>Start your Journey as Influencer</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
-                <button>Prebook Now <span><i class="fas fa-arrow-right"></i></span></button>
-                <i class="fas fa-shopping-cart"></i>
-                <i class="fas fa-search"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-youtube"></i>
-                <i class="fab fa-linkedin"></i>
-                <i class="fab fa-google-plus"></i>
-                <i class="fab fa-twitter"></i>
+                <button class="btn">Prebook Now <span><i class="fas fa-arrow-right"></i></span></button>
             </div>
             <div class="baner-right">
-                <img src="" alt="Hello I am Baner Image" />
+                <img src="./images/main-camera.png" alt="Hello I am Baner Image" />
             </div>
         </div>
     </section>
-    <!-- //Banner Section Start -->
+    <!-- //Banner Section End -->
+
+    <!-- Client Logo Section Start -->
+    <section class="container">
+        <div class="client-logo">
+            <img src="./logos/Alibaba.svg" alt="" />
+            <img src="./logos/Daraz.pk Logo.svg" alt="" />
+            <img src="./logos/Ebay.svg" alt="" />
+            <img src="./logos/Rakuten.svg" alt="" />
+            <img src="./logos/Target.svg" alt="" />
+            <img src="./logos/Walmart.svg" alt="" />
+        </div>
+
+    </section>
+    <!-- //Client Logo Section End -->
 
 </body>
 </html>
