--- a/index.html
+++ b/index.html
@@ -47,5 +47,174 @@
     </section>
     <!-- //Client Logo Section End -->
 
+
+    <section class="container product-section-area">
+        <h1>Popular Collection</h1>
+        <div class="product-collection items">
+            <article class="item">
+                    <img src="./images/action.png" alt="">
+                    <div class="product-info">
+                        <h2>Flex Tripod</h2>
+                        <div class="price">$50.48</div>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span>4.99</span>
+                        </div>
+                        <p>Wordwide shifting</p>
+                        <p>available</p>
+                        <p>Buyers protection possible!</p>
+                    </div>
+            </article>
+            <article class="item">
+                    <img src="./images/airpod.png" alt="">
+                    <div class="product-info">
+                        <h2>Flex Tripod</h2>
+                        <div class="price">$50.48</div>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span>4.99</span>
+                        </div>
+                        <p>Wordwide shifting</p>
+                        <p>available</p>
+                        <p>Buyers protection possible!</p>
+                    </div>
+            </article>
+            <article class="item">
+                    <img src="./images/camera.png" alt="">
+                    <div class="product-info">
+                        <h2>Flex Tripod</h2>
+                        <div class="price">$50.48</div>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span>4.99</span>
+                        </div>
+                        <p>Wordwide shifting</p>
+                        <p>available</p>
+                        <p>Buyers protection possible!</p>
+                    </div>
+            </article>
+            <article class="item">
+                    <img src="./images/drone.png" alt="">
+                    <div class="product-info">
+                        <h2>Flex Tripod</h2>
+                        <div class="price">$50.48</div>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span>4.99</span>
+                        </div>
+                        <p>Wordwide shifting</p>
+                        <p>available</p>
+                        <p>Buyers protection possible!</p>
+                    </div>
+            </article>
+            <article class="item">
+                    <img src="./images/gear.png" alt="">
+                    <div class="product-info">
+                        <h2>Flex Tripod</h2>
+                        <div class="price">$50.48</div>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span>4.99</span>
+                        </div>
+                        <p>Wordwide shifting</p>
+                        <p>available</p>
+                        <p>Buyers protection possible!</p>
+                    </div>
+            </article>
+            <article class="item">
+                    <img src="./images/lights.png" alt="">
+                    <div class="product-info">
+                        <h2>Flex Tripod</h2>
+                        <div class="price">$50.48</div>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span>4.99</span>
+                        </div>
+                        <p>Wordwide shifting</p>
+                        <p>available</p>
+                        <p>Buyers protection possible!</p>
+                    </div>
+            </article>
+            <article class="item">
+                    <img src="./images/mic.png" alt="">
+                    <div class="product-info">
+                        <h2>Flex Tripod</h2>
+                        <div class="price">$50.48</div>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span>4.99</span>
+                        </div>
+                        <p>Wordwide shifting</p>
+                        <p>available</p>
+                        <p>Buyers protection possible!</p>
+                    </div>
+            </article>
+            <article class="item">
+                    <img src="./images/tripod.png" alt="">
+                    <div class="product-info">
+                        <h2>Flex Tripod</h2>
+                        <div class="price">$50.48</div>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span>4.99</span>
+                        </div>
+                        <p>Wordwide shifting</p>
+                        <p>available</p>
+                        <p>Buyers protection possible!</p>
+                    </div>
+            </article>
+            <article class="item">
+                    <img src="./images/setup.png" alt="">
+                    <div class="product-info">
+                        <h2>Flex Tripod</h2>
+                        <div class="price">$50.48</div>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span>4.99</span>
+                        </div>
+                        <p>Wordwide shifting</p>
+                        <p>available</p>
+                        <p>Buyers protection possible!</p>
+                    </div>
+            </article>
+        </div>
+    </section>
+
 </body>
 </html>
