--- a/index.html
+++ b/index.html
@@ -216,5 +216,19 @@
         </div>
     </section>
 
+    <footer>
+        <h2>Influencer products</h2>
+        <p>Copyright © 2020 influencer products</p>
+        <p>All rights reserved</p>
+        <span>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-youtube"></i>
+            <i class="fab fa-google-plus"></i>
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-twitter"></i>
+        </span>
+    </footer>
+
 </body>
 </html>
