--- a/index.html
+++ b/index.html
@@ -214,6 +214,9 @@
                     </div>
             </article>
         </div>
+        <div class="link">
+            <p>See More <i class="fas fa-arrow-right"></i></p>
+        </div>
     </section>
 
     <footer>
