footer social link fix

--- a/index.html
+++ b/index.html
@@ -246,12 +246,12 @@
         <p>Copyright © 2020 influencer products</p>
         <p>All rights reserved</p>
         <span>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-youtube"></i>
-            <i class="fab fa-google-plus"></i>
-            <i class="fab fa-linkedin"></i>
-            <i class="fab fa-twitter"></i>
+            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href=""><i class="fab fa-facebook"></i></a>
+            <a href=""> <i class="fab fa-youtube"></i></a>
+           <a href=""><i class="fab fa-google-plus"></i></a>
+            <a href=""> <i class="fab fa-linkedin"></i></a>
+           <a href=""><i class="fab fa-twitter"></i></a>
         </span>
     </footer>
 
